# libggml-python

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  pyproject.toml  renovate.json
.github/workflows/: build-publish-cuda.yaml  build-publish.yaml  renovate.yaml
cmake/: ggmlConfig.cmake.in
