[project]
name = "libggml"
version = 0.1.0
description = "Prebuilt ggml libraries"
authors = [
  { name = "benniekiss" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/benniekiss/ggml-python"
Tracker = "https://github.com/benniekiss/ggml-python/issues"
ggml = "https://github.com/ggml-org/ggml"

[build-system]
requires = [
  "scikit-build-core>=0.11.5",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
wheel.packages = ["src/libggml"]
wheel.exclude = ["lib/**"]
sdist.include = ["ggml/"]
