[project]
name = "libggml-python"
dynamic = ["version"]
description = "Prebuilt ggml libraries"
authors = [
  { name = "benniekiss" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/benniekiss/libggml-python"
Tracker = "https://github.com/benniekiss/libggml-python/issues"
Upstream = "https://github.com/ggml-org/ggml"

[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["src/libggml"]
wheel.install-dir = "libggml"
sdist.include = ["ggml/", "src/libggml/_version.py"]

[tool.scikit-build.cmake.define]
CMAKE_RUNTIME_OUTPUT_DIRECTORY = "build"
GGML_OPENMP = "OFF"
GGML_VULKAN = "OFF"
GGML_CUDA = "OFF"

[[tool.scikit-build.overrides]]
if.env.USE_VULKAN = true
inherit.cmake.define = "append"
cmake.define.GGML_VULKAN = "1"

[[tool.scikit-build.overrides]]
if.env.USE_CUDA = true
inherit.cmake.define = "append"
cmake.define.GGML_CUDA = "1"

[[tool.scikit-build.overrides]]
if.env.USE_OPENMP = true
inherit.cmake.define = "append"
cmake.define.GGML_OPENMP = "1"

[project.entry-points."cmake.root"]
ggml = "libggml"

[project.entry-points."cmake.prefix"]
ggml = "libggml"

[tool.setuptools_scm]
write_to = "src/libggml/_version.py"

[tool.cibuildwheel]
# skip 32bit builds
skip = ["*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --exclude libggml* -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --exclude libggml* --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --ignore-existing -w {dest_dir} {wheel}"

[tool.uv]
managed = true
required-version = "~=0.9.0"
index-url = "https://pypi.org/simple/"
